# NeoVault

./: .gitignore  CMakeLists.txt  README.md
src/: cryptoutils.cpp  cryptoutils.h  main.cpp
